@startuml

abstract class Person {
    -name: String
    -age: int
}

class Student extends Person implements Comparable{
    -id: int
    -{static} generalId: int
    __
    ..Getters&Setters..
    +getId(): int
    ..@Override..
    +toString(): String
    +compareTo(): int
}

class StudentGroup implements Iterable, Comparable {
    -idGroup: Integer
    -group: List<Student>
    __
    +add()
    ..Getters&Setters..
    +getGroup(): List<Student>
    +setGroup()
    +getIdGroup(): Integer
    +setIdGroup()
    ..@Override..
    +toString(): String
    +iterator(): StudentIterator
    +compareTo()
}

class StudentSteam implements Iterable {
    -steamNumber: int
    -groups: List<StudentGroup>
    __
    +add()
    +remove(): boolean
    +getGroups(): List<StudentGroup>
    +sortSteam()
    ..@Override..
    +toString(): String
    +iterator(): GroupIterator
}

class StudentIterator implements Iterator {
    -counter: int
    -students: List<Student>
    __
    ..@Override..
    +hasNext()
    +next(): Student
}

class GroupIterator implements Iterator {
    -counter: int
    -groups: List<StudentGroup>
    __
    ..@Override..
    +hasNext()
    +next(): StudentGroup
}

class PersonComparator implements Comparator {
    ..@Override..
    compare(): int
}

class Employee extends Person {
    -special: String
}

class Teacher extends Person {
    -acadDegree: String
    __
    ..@Override..
    +toString(): String
}

class EmployeeService implements iPersonService {
    -count: int
    -employees: list<Employee>
    __
    +sortByFIO()
    ..@Override..
    +getAll(): list<Employee>
    create()
}

class StudentService implements iPersonService {
    -count: int
    -students: list<Employee>
    __
    +sortByFIO()
    ..@Override..
    +getAll(): list<Student>
    create()
}

class TeacherService implements iPersonService {
    -count: int
    -teachers: list<Teacher>
    __
    +sortByFIO()
    +print()
    ..@Override..
    +getAll(): list<Teacher>
    create()
}

interface iPersonService {
    +getAll(): list<T>
    +create()
}
interface Comparable

Student --o StudentGroup
StudentIterator <|-- StudentGroup
'StudentGroup --* Student

StudentGroup --o StudentSteam
GroupIterator <|-- StudentSteam
'StudentSteam --* StudentGroup

EmployeeService o-- Employee
TeacherService o-- Teacher
StudentService o-- Student

EmployeeService -- PersonComparator
TeacherService -- PersonComparator
StudentService -- PersonComparator

hide @unlinked
@enduml